[package]
name = "ld-so-impl"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.23.0", features = [
    "latest_stable_rust",
    "derive",
    "zeroable_unwind_fn",
] }
fake-enum = "0.1.4"
cfg-match = "0.2.1"
bitflags = { version = "2.9.1", features = ["bytemuck"] }

[lib]
crate-type = ["rlib"]


[profile.dev]
opt-level = 3            # we need to inline like crazy
debug-assertions = false
overflow-checks = false

[features]
alloc = []
tls = []
deny-wx = []
debug = []
entry = []
